Included a Rest Endpoint for the Next Actionable Critical Dependency
