# pkg/guacrest/openapi.yaml
@@ -69,7 +69,7 @@ paths:
               - scorecard
       responses:
         "200":
-          $ref: "#/components/responses/PurlList"
+          $ref: "#/components/responses/PackageNameList"
         "400":
           $ref: "#/components/responses/BadRequest"
         "500":
@@ -115,6 +115,13 @@ components:
       properties:
         Message:
           type: string
+    PackageName:
+      type: object
+      properties:
+        Name:
+          type: string
+        DependentCount:
+          type: integer
   responses:
     # for code 200
     PurlList:
@@ -122,18 +129,18 @@ components:
       content:
         application/json:
           schema:
-            type: object
-            required: 
-              - PaginationInfo
-              - PurlList
-            properties:
-              PaginationInfo:
-                $ref: "#/components/schemas/PaginationInfo"
-              PurlList:
-                type: array
-                items: 
-                  $ref: "#/components/schemas/Purl"
-    # for code 400, client side error
+            type: array
+            items:
+              $ref: "#/components/schemas/Purl"
+    PackageNameList:
+      description: A list of package names with their dependent counts
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: "#/components/schemas/PackageName"
+    # intended for code 400, client side error
     BadRequest:
       description: Bad request, such as from invalid or missing parameters
       content:
